Id d'application i status implementat al dto per client desktop